substrate/frame/election-provider-support/solution-type/tests/ui/fail/missing_size_bound.stderr
error: Expected binding: `MaxVoters = ...`
  --> tests/ui/fail/missing_size_bound.rs:24:2
   |
24 |     ConstU32::<10>,
   |     ^^^^^^^^^^^^^^
